--- a/Jupiter/app/views/display/index.html.erb
+++ b/Jupiter/app/views/display/index.html.erb
@@ -1,2 +1,17 @@
-<h1>Display#index</h1>
-<p>Find me in app/views/display/index.html.erb</p>
+<div id="main" role="main">
+  <div class="container">
+    <div class="content">
+      <div class="row">
+        <div class="span12">
+	  <h1>Display#index</h1>
+	  <p>Find me in app/views/display/index.html.erb</p>
+
+        </div> <!-- span12 -->
+      </div> <!-- row -->
+    </div> <!-- content -->
+  </div> <!-- container -->
+</div> <!-- main -->
+
+
+
+
