--- a/Jupiter/app/views/display/index.html.erb
+++ b/Jupiter/app/views/display/index.html.erb
@@ -3,8 +3,7 @@
     <div class="content">
       <div class="row">
         <div class="span12">
-	  <h1>Display#index</h1>
-	  <p>Find me in app/views/display/index.html.erb</p>
+	  <h1>Monitoring System Status</h1>
         </div> <!-- span12 -->
       </div> <!-- row -->
       <div class="row">
