--- a/Jupiter/app/views/display/index.html.erb
+++ b/Jupiter/app/views/display/index.html.erb
@@ -1,4 +1,4 @@
-<meta http-equiv="refresh" content="5; URL=http://www.yourdomain.com/yoursite.html">
+<meta http-equiv="refresh" content="5; URL=http://capstone.cyclone8.org">
 <div id="main" role="main">
   <div class="container">
     <div class="content">
