--- a/Jupiter/app/views/display/index.html.erb
+++ b/Jupiter/app/views/display/index.html.erb
@@ -26,6 +26,11 @@
 	      </li>
 	    </ul>
 	    <div id="weightTabContent" class="tab-content">
+	      <script>
+		setInterval( function () {
+		  $('div#weight15').load('http://capstone.cyclone8.org #weight15')
+		}, 5000);
+	      </script>
 	      <div class="tab-pane fade in active" id="weight15">
 		<div id="last15_chart"></div>
 		<script>
@@ -47,10 +52,6 @@
 		    });
 		  }
 		  $(function () { makelast15(); });
-		  setInterval( function () {
-		    $('div#weight15').load('http://capstone.cyclone8.org #weight15')
-		    $(function () { makelast15(); });
-		  }, 5000);
 		</script>
 		<ul>
 		<% @last15.each do |i| %>
