--- a/Jupiter/app/views/display/index.html.erb
+++ b/Jupiter/app/views/display/index.html.erb
@@ -29,6 +29,7 @@
 	      <script>
 		setInterval( function () {
 		  $('div#weight15').load('http://capstone.cyclone8.org #weight15')
+		  $(function () { makelast15(); });
 		}, 10000);
 	      </script>
 	      <div class="tab-pane fade in active" id="weight15">
