--- a/Jupiter/app/views/display/index.html.erb
+++ b/Jupiter/app/views/display/index.html.erb
@@ -28,8 +28,10 @@
 	    <div id="weightTabContent" class="tab-content">
 	      <script>
 		setInterval( function () {
-		  $('div#weight15').load('http://capstone.cyclone8.org #weight15')
-		  $(function () { makelast15(); });
+		  $('div#weight15').load('http://capstone.cyclone8.org #weight15');
+		  setTimeout( function () {
+		    $(function () { makelast15(); });
+		  }, 1000);
 		}, 10000);
 	      </script>
 	      <div class="tab-pane fade in active" id="weight15">
