--- a/Jupiter/app/views/display/index.html.erb
+++ b/Jupiter/app/views/display/index.html.erb
@@ -236,7 +236,7 @@
 	</div> <!-- span4 -->
 	<div class="span4">
 	  <h2>Temperature</h2>
-	  <div <% if @latest.temperature > @thresholdT %>style="background-color: red;"<% end %>>
+	  <div <% if @latest.temperature < @thresholdT %>style="background-color: red;"<% end %>>
 	    <p>Latest Measurement (<%= (Time.zone.now - @latest.created_at).round %> secs ago):</p>
 	    <p style="margin-left: 20px;"><%= @latest.temperature %> &deg;C</p>
 	  </div>
@@ -276,7 +276,7 @@
 		</script>
 		<ul>
 		<% @last15.each do |i| %>
-		  <li <% if i.temperature > @thresholdT %>style="background-color: red;"<% end %>>
+		  <li <% if i.temperature < @thresholdT %>style="background-color: red;"<% end %>>
 		    <%= (Time.zone.now - i.created_at).round %> secs ago:
 		    <%= i.temperature %> &deg;C
 		  </li>
@@ -306,7 +306,7 @@
 		</script>
 		<ul>
 		<% @last60.each do |i| %>
-		  <li <% if i.temperature > @thresholdT %>style="background-color: red;"<% end %>>
+		  <li <% if i.temperature < @thresholdT %>style="background-color: red;"<% end %>>
 		    <%= (Time.zone.now - i.created_at).round %> secs ago:
 		    <%= i.temperature %> &deg;C
 		  </li>
@@ -336,7 +336,7 @@
 		</script>
 		<ul>
 		<% @last360.each do |i| %>
-		  <li <% if i.temperature > @thresholdT %>style="background-color: red;"<% end %>>
+		  <li <% if i.temperature < @thresholdT %>style="background-color: red;"<% end %>>
 		    <%= (Time.zone.now - i.created_at).round %> secs ago:
 		    <%= i.temperature %> &deg;C
 		  </li>
